# dothttp

./: .gitignore  LICENSE  README.md  cargo.toml
.claude/: settings.local.json
.claude/skills/dothttp-parser/: SKILL.md
.claude/skills/general-debug/: SKILL.md
.claude/skills/general-syntax/: SKILL.md
.claude/skills/rust-core/: SKILL.md
dothttp-cli/: Cargo.toml
dothttp-cli/src/: discovery.rs  display.rs  main.rs  selection.rs
dothttp-parser/: Cargo.toml
dothttp-parser/httpfiles/: getrequest.http  httpversion.http  interpolation.http  multirequest.http  nonamedget.http  postrequest.http  variables.http
dothttp-parser/src/: error.rs  interpolation.rs  lib.rs  models.rs  parser.rs
dothttp-runner/: Cargo.toml
dothttp-runner/src/: convert.rs  error.rs  lib.rs  models.rs  runner.rs  tests.rs
dothttp-vscode/: .vscodeignore  dothttp-0.2.0.vsix  package-lock.json  package.json  tsconfig.json
dothttp-vscode/src/: cli.ts  codeLensProvider.ts  extension.ts  responsePanel.ts
dothttp-vscode/syntaxes/: dothttp.tmLanguage.json
openspec/: config.yaml
openspec/changes/vscode-http-runner-extension/: design.md  proposal.md  tasks.md
openspec/specs/cli-file-discovery/: spec.md
openspec/specs/cli-request-selection/: spec.md
openspec/specs/cli-response-display/: spec.md
openspec/specs/http-runner/: spec.md
openspec/specs/variable-declaration/: spec.md
openspec/specs/vscode-codelens-runner/: spec.md
openspec/specs/vscode-extension-host/: spec.md
openspec/specs/vscode-response-display/: spec.md
test_integration/httpfiles/: public_apis.http
(+34 files in other folders)
