[package]
name = "dothttp-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
dothttp-parser = { path = "../dothttp-parser" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
